fix(eresto-u): add sticky footer and fix tiny header overflow

--- a/projects/old/eresto-u/styles/eResto.css
+++ b/projects/old/eresto-u/styles/eResto.css
@@ -136,9 +136,7 @@ table {
 /******************************************************************************************************************/
 /*                                                   General settings                                             */
 /******************************************************************************************************************/
-html {
-  height: 100%;
-}
+
 body {
   font-family: "Inter", sans-serif;
   font-size: 18px;
@@ -148,8 +146,11 @@ body {
 }
 
 main {
-  width: 100%;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  overflow-x: hidden;
 }
 
 a,
@@ -157,6 +158,7 @@ a:visited {
   text-decoration: none;
   color: var(--color1);
 }
+
 a:hover {
   text-decoration: underline;
 }
@@ -223,6 +225,7 @@ header {
   width: 100%;
   text-align: center;
   color: white;
+  max-width: 100%;
 }
 
 .menu {
@@ -551,6 +554,7 @@ abbr {
 /******************************************************************************************************************/
 
 main > footer {
+  margin-top: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
